<?xml version="1.0" encoding="utf-8"?>

<ViewAnimator
    android:id="@+id/view_animator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.michelgrosjean.calculus.ui.QuestionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/answer1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10 + 10 = ?" />

        <Button
            android:id="@+id/answer1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/answer3"
            app:layout_constraintEnd_toStartOf="@id/answer2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question"
            tools:text="answer1" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/answer4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/answer1"
            app:layout_constraintTop_toBottomOf="@id/question"
            tools:text="answer2" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/answer4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer1"
            tools:text="answer3" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/answer3"
            app:layout_constraintTop_toBottomOf="@id/answer2"
            tools:text="answer4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/lbl_score"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/score" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/btn_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lbl_score"
            tools:text="SCORE : 8/10" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_quit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score"
            android:text="@string/retry" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_retry"
            app:layout_constraintTop_toBottomOf="@id/score"
            android:text="@string/quit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ViewAnimator>